--- a/portfolio.css
+++ b/portfolio.css
@@ -11,7 +11,7 @@ h1
 {
     color: brown;
 }
-section
+.flexible-container
 {
     display: flex;
     margin-bottom: 150px;
@@ -44,4 +44,22 @@ section
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience-item h2
+{
+    color: chartreuse;
+}
+.experience-item
+{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    box-shadow: 10px 10px 40px gray;
+}
+.experience-area
+{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
 }
