--- a/portfolio.css
+++ b/portfolio.css
@@ -56,10 +56,22 @@ h1
     margin-right: 5%;
     padding-left: 20px;
     box-shadow: 10px 10px 40px gray;
+    border-left: 10px solid;
+    
 }
 .experience-area
 {
     background-image: url(images/exp-bg.png);
     background-repeat: no-repeat;
     background-position: left;
+}
+#baby-web
+{
+    border-left: 10px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+footer p
+{
+    text-align: center;
 }
